force-app/main/default/objects/OrderItem/fields/Acrescimo__c.field-meta.xml
<CustomField>
    <fullName>Acrescimo__c</fullName>
    <formula>IF( PrecoFinal__c &lt; UnitPrice , (UnitPrice - PrecoFinal__c) / PrecoFinal__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acréscimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>