force-app/main/default/objects/OrderItem/fields/CustoProducao__c.field-meta.xml
<CustomField>
    <fullName>CustoProducao__c</fullName>
    <description>Custo de produção do(s) item(s)</description>
    <formula>Product2.CustoProducao__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custo de Produção</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>