force-app/main/default/objects/OrderItem/fields/DeletedProduct__c.field-meta.xml
<CustomField>
    <fullName>DeletedProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>O produto foi deletado pela TOTVS?</description>
    <inlineHelpText>O produto foi deletado pela TOTVS?</inlineHelpText>
    <label>Produto Deletado?</label>
    <type>Checkbox</type>
</CustomField>