force-app/main/default/objects/OrderItem/fields/Desconto__c.field-meta.xml
<CustomField>
    <fullName>Desconto__c</fullName>
    <description>Desconto do preço de venda em relação ao preço final.</description>
    <formula>( PrecoFinal__c - UnitPrice ) /  PrecoFinal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>