force-app/main/default/objects/OrderItem/fields/ImpostoPercent__c.field-meta.xml
<CustomField>
    <fullName>ImpostoPercent__c</fullName>
    <description>Porcentagem de imposto aplicado sobre o item.</description>
    <label>Porcentagem de Imposto</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>