force-app/main/default/objects/OrderItem/fields/MargemPercent__c.field-meta.xml
<CustomField>
    <fullName>MargemPercent__c</fullName>
    <description>Porcentagem de margem aplicada sobre o item.</description>
    <label>Porcentagem de Margem</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>