force-app/main/default/objects/OrderItem/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <description>Observações sobre o item do pedido.</description>
    <label>Observação</label>
    <type>TextArea</type>
</CustomField>