force-app/main/default/objects/OrderItem/fields/PrecoFinal__c.field-meta.xml
<CustomField>
    <fullName>PrecoFinal__c</fullName>
    <description>Preço final, incluindo a margem.</description>
    <formula>PrecoSemMargem__c * (1 +  MargemPercent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>