force-app/main/default/objects/OrderItem/fields/PrecoSemMargem__c.field-meta.xml
<CustomField>
    <fullName>PrecoSemMargem__c</fullName>
    <description>Preço do item excluindo a margem.</description>
    <formula>( ListPrice  +  ValorFrete__c) * (1 + ImpostoPercent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço sem Margem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>