force-app/main/default/objects/OrderItem/fields/TotalFinalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalFinalPrice__c</fullName>
    <formula>Quantity *  PrecoFinal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Final Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>