force-app/main/default/objects/OrderItem/fields/ValorFrete__c.field-meta.xml
<CustomField>
    <fullName>ValorFrete__c</fullName>
    <description>Valor do frete para o item.</description>
    <label>Valor de Frete</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>