force-app/main/default/objects/OrderItem/validationRules/Pedido_Ativo.validationRule-meta.xml
<ValidationRule>
    <fullName>Pedido_Ativo</fullName>
    <active>true</active>
    <description>O pedido não</description>
    <errorConditionFormula>AND(NOT(ISNEW()),  ISPICKVAL(Order.Status, &apos;Activated&apos;))</errorConditionFormula>
    <errorMessage>O pedido está ativo e não pode ter seus itens alterados.</errorMessage>
</ValidationRule>