force-app/main/default/objects/OrderItem/validationRules/Preco_Not_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Preco_Not_Zero</fullName>
    <active>true</active>
    <description>O preço não pode ser igual a zero.</description>
    <errorConditionFormula>ListPrice = 0</errorConditionFormula>
    <errorDisplayField>ListPrice</errorDisplayField>
    <errorMessage>O preço não pode ser zero.</errorMessage>
</ValidationRule>