force-app/main/default/objects/OrderItem/validationRules/PrecoVenda_Obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>PrecoVenda_Obrigatorio</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( UnitPrice )</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>Digite um preço de venda.</errorMessage>
</ValidationRule>