force-app/main/default/objects/OrderItem/validationRules/Produto_obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Produto_obrigatorio</fullName>
    <active>true</active>
    <description>Deve ser fornecido um produto.</description>
    <errorConditionFormula>ISBLANK( Product2Id )</errorConditionFormula>
    <errorDisplayField>Product2Id</errorDisplayField>
    <errorMessage>Produto obrigatório.</errorMessage>
</ValidationRule>