force-app/main/default/objects/OrderItem/validationRules/Qtd_not_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Qtd_not_zero</fullName>
    <active>true</active>
    <description>A quantidade não pode ser maior que zero.</description>
    <errorConditionFormula>Quantity &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>A quantidade deve ser maior que zero.</errorMessage>
</ValidationRule>